Hide bundeshaus img for small screens, trial to fix iphone right whitespace problem

--- a/sass/transparent_sky.scss
+++ b/sass/transparent_sky.scss
@@ -1172,6 +1172,12 @@ a.elf-external.elf-icon.no-elf-icon,
 
 }
 
+@media only screen and (max-width:450px) {
+  #block-block-3 {
+    display: none;
+  }
+}
+
 @media only screen and (max-width:1150px) {
 
   #branding {
